KAFKA-18641: AsyncKafkaConsumer could lose records with auto offset commit
JIRA: KAFKA-18641
Please refer to jira ticket for further details.
In short, application thread advances positions but allConsumed is
called by background thread. This will lead to inconsistent between
committed offset and actual consumed records

# Conflicts:
#	clients/src/test/java/org/apache/kafka/clients/consumer/internals/events/ApplicationEventProcessorTest.java